Fix T42163: Outliner: recursive visibility toggle: autokeyframe only works for ancestor, not children

Ancestor's autokeyframing is handled through UI/buttons code, but children completely
skipped this, so we have to do it explicitely here...